# SpaceEngine

./: .clang-format  .gitignore  .gitmodules  .rgignore  CMakeLists.txt  build-dlls.bat  compile_commands.json  imgui.ini  neovim.json  se.cap  space.debugTarget  vcpkg.json
data/: asset_db.sdef  base.sdef  engine.sdef  game.sdef
data/SOURCE/: character.aseprite  plant.aseprite
data/shaders/: bloomds.frag.glsl  bloomus.frag.glsl  default.vert.glsl  font.frag.glsl  opaque_color.frag.glsl  opaque_color.vert.glsl  sol.frag.glsl  sprite.frag.glsl  tonemap.frag.glsl
data_source/core/: core.def
src/assetmanager/: asset_set.cc  asset_set.hh  assetmanager.cc  assetmanager.hh  loader.cc  loader.hh
src/code/: code.cc  game_data.hh  player.hh  scene_animation.hh  scene_forest.hh  scene_garden.hh  scene_start.hh  sprite_render.hh
src/common/: debug.cc  debug.hh  defs.hh  endianess.hh  file_utils.hh  hash.hh  hash_table.hh  lru_cache.hh  memory_arena.cc  memory_arena.hh  memory_arena_typed.hh  memory_pool.hh  memory_scratch_arena.cc  memory_scratch_arena.hh  pipeline_settings.hh  result.hh  sdef_parser.cc  sdef_parser.hh  timer.cc  timer.hh  win32_export.hh
src/data/: app_state.hh  asset_storage.hh  asset_types.hh  event.hh  game_api.hh  game_data.hh  game_settings.hh  game_state.hh  glm_exts.hh  mesh.hh  renderer_api.hh  renderer_state.hh  static_parameters.hh
src/input/: input.cc  input.hh  keys.hh  mouse_button.hh  mouse_keyboard.hh
src/memory/: memory_arena.cc  memory_arena.hh  memory_arena_old.cc  memory_arena_typed.hh  memory_pool.hh  memory_scratch_arena.cc  memory_scratch_arena.hh
src/opengl/: renderer.cc  renderer_draw.hh  renderer_framebuffer.hh  renderer_mesh.hh  renderer_pipeline.hh  renderer_shaders.hh  renderer_state.hh  renderer_texture.hh
src/opengl/glad/: gl.c  gl.h
src/pyrolib/: CMakeLists.txt
src/pyrolib/container/: arena_vector.hh  array.hh  basic_vector.hh  hash_table.hh  heap_vector.hh  lru_cache.hh  string_buffer.hh  string_id.hh
src/pyrolib/log/: assert.hh  log.cc  log.hh
src/pyrolib/math/: math.hh
src/pyrolib/memory/: arena.cc  arena.hh  heap.hh  pool.hh  scratch_arena.cc  scratch_arena.hh
src/pyrolib/threading/: spinlock.hh
src/pyrolib/utils/: api.hh  compare.hh  hash.hh  timer.cc  timer.hh
src/renderer/: pipeline_settings.hh  render_batch.cc  render_batch.hh  render_pass_bloom.cc  render_pass_bloom.hh  render_pass_geometry.cc  render_pass_geometry.hh  render_pass_tonemap.cc  render_pass_tonemap.hh  render_utils.cc  render_utils.hh  renderer.cc  renderer.hh
src/renderer/text/: glyph_builder.cc  glyph_builder.hh  internal_font.hh  render_text.cc  render_text.hh
src/sdl_helpers/: events.hh  key_translate.hh  sdl_read_input.hh
src/win32/: win32_data.hh  win32_space.cc
